Heroku overwrites database.yml so use initialiser to set MongoHQ URI

--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ test: &TEST
   database: noodallui-test
 
 production:
-  uri: <%= ENV['MONGOHQ_URL'] %>
+  database: noodallui-production
 
 staging:
   database: noodallui-staging
