--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -6,3 +6,4 @@ std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} --strict --tags ~@w
 default: --drb <%= std_opts %> features
 wip: --drb --tags @wip:3 --wip features
 rerun: --drb <%= rerun_opts %> --format rerun --out rerun.txt --strict --tags ~@wip
+publish: --drb <%= std_opts %> --format Cucumber::Formatter::SevenFeatures --out public/features.html features
